--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -4,11 +4,11 @@ reviews:
   profile: "chill"
   request_changes_workflow: false
   high_level_summary: true
-  poem: true
+  poem: false
   review_status: true
   collapse_walkthrough: false
   auto_review:
-    enabled: true
+    enabled: false
     drafts: false
 chat:
-  auto_reply: true
+  auto_reply: false
